Make this diagram more interactive
Could provide a simple truss system with external forces and reaction forces where students can hover over joints to view joint-wise FBDs

--- a/src/pages/sta/trusses.astro
+++ b/src/pages/sta/trusses.astro
@@ -134,6 +134,7 @@ Method of joints for truss analysis:
 <p><em>Note:</em> Remember that truss members that are in compression "push back" on the pin joints, and truss members that are in tension "pull" on the pin joints. 
 </p>
 
+<!-- Suggestion: Make this diagram more interactive -->
 <Image src='/sta/trusses/ExplodedTruss.jpg' width='6'></Image>
 
 </SubSection>
