Real world example suggestion
Quick suggestion based on a non-TAM class I took: in Geology when talking about tectonic plates there was a huge emphasis on on earthquakes resulting from faults slipping due to an excessive build up of shear stress

--- a/src/pages/sta/shear_moment_diagrams.astro
+++ b/src/pages/sta/shear_moment_diagrams.astro
@@ -15,6 +15,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
 import DisplayEquation from "../../components/DisplayEquation.astro" 
 
 ---
+<!-- Suggestion for a real world example -->
 <Layout title="Shear Force & Bending Moment Diagrams">
 
     <div slot="navtree">
