--- a/src/pages/sol/transverse_shear.astro
+++ b/src/pages/sol/transverse_shear.astro
@@ -265,7 +265,7 @@ Built-up beams are beams that have been put together with either an adhesive (gl
 <strong>Fasteners</strong> supply resistance at fixed intervals. Use the shear flow formula to analyze the beam.
 </p>
 
-<Example id="blt-fst" title="The followling beam is composed of 2 boards connected by 6 nails." solution="True">
+<Example id="blt-fst" title="The following beam is composed of 2 boards connected by 6 nails." solution="True">
   <div class="d-flex flex-row">
     <Row>
       <Col values="12 md-4">
