--- a/src/pages/dyn/rigid_body_kinematics.astro
+++ b/src/pages/dyn/rigid_body_kinematics.astro
@@ -1166,8 +1166,8 @@ import DisplayTable from "../../components/DisplayTable.astro"
 
     <Image src="/dyn/rigid_body_kinematics/avs_Mercedes_Kubelwagen_G5_600.jpg" width="6">
       <p class="figureCaption">
-        A <a
-        href="http://de.wikipedia.org/wiki/Mercedes-Benz_170_VG">Mercedes-Benz
+        Figure 1: A <a
+        href="http://www.autoevolution.com/cars/mercedes-benz-g5-w152-1937.html#aeng_mercedes-benz-g5-w152-1937-20">Mercedes-Benz
         Typ G 5 (W 152, 1937–1941)</a> housed in <a
         href="http://en.wikipedia.org/wiki/Technikmuseum_Speyer">Technik
         Museum Speyer</a>, showing the use of a four-wheel
@@ -1414,7 +1414,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
         <button class="reset-time:aml-fk-c" onclick="aml_fk_c.resetTime()">reset</button>
       </p>
       <p class="figureCaption">
-        An <a href="">MRI</a> image of a <a
+        <i>Figure 2: An <a href="http://en.wikipedia.org/wiki/Magnetic_resonance_imaging">MRI</a> image of a <a
         href="http://en.wikipedia.org/wiki/Sagittal_plane">sagittal
         section</a> through a human <a
         href="http://en.wikipedia.org/wiki/Knee">knee joint</a>,
@@ -1426,7 +1426,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
         href="http://en.wikipedia.org/wiki/File:MRT_ACL_PCL_01.jpg">Wikimedia
         Commons image</a> (<a
         href="http://creativecommons.org/licenses/by-sa/2.0/deed.en">CC
-        BY-SA 2.0</a>).
+        BY-SA 2.0</a>). </i>
       </p>
       <p>
         The four-bar model of the knee is only approximate, and
@@ -1442,7 +1442,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
     </PrairieDrawCanvas>
 
     <div class="references">
-      <h3>References</h3>
+      <h3 style="text-align:center;">References</h3>
       <ul class="references">
         <li>
           A. B. Zavatsky and J. J. O'Connor.
@@ -1512,7 +1512,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
           <button class="reset-time:aml-fw-c" onclick="aml_fw_c.resetTime()">reset</button>
         </p>
         <p class="figureCaption">
-          The rear suspension of a 1998 <a
+          <i>Figure 3: The rear suspension of a 1998 <a
           href="http://en.wikipedia.org/wiki/Ford_Ranger_EV">Ford
           Ranger EV</a>.  Image credit: <a
           href="http://commons.wikimedia.org/wiki/File:GSFRRearViewUnderCropped.jpg">Wikimedia
@@ -1520,7 +1520,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
           href="http://creativecommons.org/licenses/sa/1.0/">CC SA
           1.0</a>) (<a
           href="aml_GSFRRearViewUnderCropped.jpg">full-sized
-          image</a>).
+          image</a>).</i>
         </p>
       </PrairieDrawCanvas>
 </SubSubSection>
