--- a/src/pages/dyn/rigid_body_kinetics.astro
+++ b/src/pages/dyn/rigid_body_kinetics.astro
@@ -1990,7 +1990,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
           </p>
         <Image alt="Bicycle riders in a velodrome" src="/dyn/rigid_body_kinetics/avb_3886159972_71e0dc52d8_o_600.jpg">
             <p class="figureCaption">
-              Bicycle riders on a banked turn at the <a
+              Figure 1: Bicycle riders on a banked turn at the <a
               target="_blank" rel="noopener noreferrer" href="http://velodrome.nscsports.org/">Blaine
               velodrome</a>, part of the <a
               target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/National_Sports_Center">National
