--- a/src/components/Image.astro
+++ b/src/components/Image.astro
@@ -10,6 +10,11 @@ const { src, width="5", alt='', id="", class_="my-3"} = Astro.props;
     .image-block{
         width: 100%;
         background-color: white;
+        
+    }
+
+    img{
+        border-radius: 10px;
     }
 
     @media (min-width: 768px){
