--- a/src/components/Image.astro
+++ b/src/components/Image.astro
@@ -10,7 +10,7 @@ const { src, width="5", alt='', id="", class_="my-3"} = Astro.props;
     .image-block{
         width: 100%;
         background-color: white;
-        
+        border-radius: 10px;
     }
 
     img{
