--- a/src/pages/dyn/particle_kinetics.astro
+++ b/src/pages/dyn/particle_kinetics.astro
@@ -1043,21 +1043,18 @@ import DisplayTable from "../../components/DisplayTable.astro"
 
         This functional relationship has no closed form.  However,
         the relationship has been established numerically based on
-        experimental data.  See <a href="#figure6">Figure 6</a>
+        experimental data.  See <a href="#fig6">Figure 6</a>
         for a schematic diagram of the drag coefficient's dependence
-        on the Reynolds number.
-
-      <section id = "figure6">
-        <p></p>
+        on the Reynolds number.</p>
         
-        <Image id="#fig6" src="/dyn/particle_kinetics/drag_coefficient.png" width="8" />
-      <em><small><p>
-       Figure 6: Experimental dependence of drag coefficient on Reynolds
-        number for a sphere. Image
-        credit: <a target="_blank" rel="noopener noreferrer" href="http://www.grc.nasa.gov/WWW/k-12/airplane/dragsphere.html">NASA</a>
-        via <a target="_blank" rel="noopener noreferrer" target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Stokes_number#/media/File:Drag_sphere_nasa.svg">Wikipedia</a>.
-      </p></small></em>
-      </section>
+        <Image id="fig6" src="/dyn/particle_kinetics/drag_coefficient.png" width="8">
+          <p>
+            Figure 6: Experimental dependence of drag coefficient on Reynolds
+             number for a sphere. Image
+             credit: <a target="_blank" rel="noopener noreferrer" href="http://www.grc.nasa.gov/WWW/k-12/airplane/dragsphere.html">NASA</a>
+             via <a target="_blank" rel="noopener noreferrer" target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Stokes_number#/media/File:Drag_sphere_nasa.svg">Wikipedia</a>.
+           </p>
+        </Image>
 
 </SubSubSubSection>
 
