Publish Threaded Components

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -470,6 +470,7 @@ import Searchbar from "./Searchbar.astro";
                             <ol style="column-fill: balance; columns: 3 <= how many columns do you want your menu to have?;" class="course-menu">
                                 <li><a href="/mf/Stress_Concentrations?origin=sidebar">Stress Concentrations</a></li>
                                 <li><a href="/mf/Failure_Theories?origin=sidebar">Failure Theories</a></li>
+                                <li><a href="/mf/Threaded_Components?origin=sidebar">Threaded Components</a></li>
                             </ol>
                         </section>
                     </div>
