--- a/src/pages/mf.astro
+++ b/src/pages/mf.astro
@@ -20,7 +20,7 @@ import "../../public/static/css/course_home_pages.css"
       <li><a href="/mf/Stress_Concentrations?origin=coursemenu">Stress Concentrations</a></li>
       <li><a href="/mf/Failure_Theories?origin=coursemenu">Failure Theories</a></li>
       <!--<li><a href="/mf/Fatigue?origin=coursemenu">Fatigue</a></li>-->
-      <!--<li><a href="/mf/Threaded_Components?origin=coursemenu">Threaded Components</a></li>-->
+      <li><a href="/mf/Threaded_Components?origin=coursemenu">Threaded Components</a></li>
       <!--<li><a href="/mf/Buckling?origin=coursemenu">Buckling</a></li>-->
       <!--<li><a href="/mf/Gears?origin=coursemenu">Gears</a></li>-->
       <!--<li><a href="/mf/Impact?origin=coursemenu">Impact</a></li>-->
