--- a/src/pages/mf/Threaded_Components.astro
+++ b/src/pages/mf/Threaded_Components.astro
@@ -23,8 +23,18 @@ import Item from "../../components/Item.astro";
         <ul class='list-group list-group-flush py-0'> 
             <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#Intro'>Introduction to Threaded Components</a></li>
             <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#power_screws'>Power Screws</a></li>
-            <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#bolted_connections'>Bolted Connections</a></li>
-            <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#thread_stripping'>Thread Stripping</a></li>
+                <ul>
+                    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#Lead_Angle'>Lead Angle</a></li>
+                    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#Thread_Angle'>Thread Angle</a></li>
+                    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#Efficiency'>Efficiency of Power Screws</a></li>
+                    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#Forces'>Power Screw Forces</a></li>
+                    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#Locking'>Power Screw Self Locking and Overhauling</a></li>
+                </ul>
+            <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#Bolted'>Bolts and Bolted Connections</a></li>
+                <ul>
+                    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#thread_stripping'>Thread Stripping</a></li>
+                </ul>
+            <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#Extra'>Additional Considerations</a></li>
 
 
         </ul>
@@ -94,128 +104,120 @@ import Item from "../../components/Item.astro";
 
     </SubSubSection>
 
+    <SubSubSection id="Efficiency" title="Efficiency of Power Screws">
+        <p>
+            A key performance metric for power screws is their efficiency, which is the output work divided by the input work.
+        </p>
+        <DisplayEquation title="Power Screw Efficiency" id="PSE" background="True" equation="\ e = \\frac{W L}{2\\pi T}"/>
+        <p>
+            Where
+            <Itemize>
+                <Item><strong>W: </strong> Is the weight being lifted</Item>
+                <Item><strong>L: </strong> Is the lead of the screw, which is how far the weight is lifted in one revolution of the screw</Item>
+                <Item><strong>T: </strong> Is the torque applied to the screw</Item>
+            </Itemize>
+        </p>
 
 
-        <SubSubSection id="Example_Problem" title="Example Problem">
+    </SubSubSection>
+
+    <SubSubSection id="Forces" title="Power Screw Forces">
+        <p>
+            When a power a screw lifts a weight, different forces act on the weight itself
+        </p>
+
+        <p>
+            <Itemize>
+                <Item><strong>Normal force (N): </strong> is the force from the inclined surface of the thread.</Item>
+                <Item><strong>Friction force <InlineEquation equation="\ f \\cdot n"/> : </strong> is the force resisting motion.</Item>
+                <Item><strong>Input force (Q): </strong> Is the force applied to lift the weight, usually from an input torque. </Item>
+            </Itemize>
+
+            Balancing these forces gives the following equation:
+        </p>
+            <DisplayEquation title="Power Screw Forces" id="PSF" background="True" equation="\  Q = W \\frac{\\cos \\lambda + f \\cos \\alpha_n}{\\cos \\alpha_n - f \\sin \\lambda}"/>
+
+    </SubSubSection>
+
+    <SubSubSection id="Locking" title="Power Screw Self Locking and Overhauling">
+        <p>
+            When the external force or torque is removed from a power screw, the weight may fall down if the force from gravity exceeds the friction force. However, if friction is sufficiently high, no motion will occur, even in the absence of an external force.
+        </p>
+
+        <p>
+            <Itemize>
+                <Item><strong>Self-locking: </strong> A mass lifted by a power screw stays in place when no force is applied.</Item>
+                <Item><strong>Overhauling:  </strong> A mass lifted by a power screw moves on its own when the force is removed.</Item>
+            </Itemize>
+
+           Whether a power screw is self locking or overhauling is dependent of the geometry of the screw as well as the friction coefficient. For a screw to be self locking the friciton coefficient must satisfy the equation shown below.
+
+            <DisplayEquation title="Power Screw Self Locking" id="PSLock" background="True" equation="\  f\\geq \\frac{L \\cos(\\alpha_n)}{\\pi d_m}"/>
+        </p>
+    </SubSubSection>
+
+
+        <SubSection id="Bolted" title="Bolts and Bolted Connections">
             <p>
-                Consider the steel plate below, with a width of <InlineEquation equation="100 \\; mm"/> and a thickness of
-                <InlineEquation equation="10 \\; mm"/> is subjected to a tensile
-                force of <InlineEquation equation="20 \\; Kn"/>. The plate has a circular hole with a diameter of <InlineEquation equation="20 \\; mm"/> at its center. The stress
-                concentration factor for this geometry is given as <InlineEquation equation="\K_t = 3"/>.
+                Bolted connections clamp things together using a <strong>bolt</strong> and <strong>nut</strong>. The bolt is stretched (tension), while the material being clamped is squeezed (compression).
 
                 <Itemize>
-                    <Item>What is the Nominal stress <InlineEquation equation="\\sigma_{nom}"/>?</Item>
-                    <Item>What is the Maximum Stress <InlineEquation equation="\\sigma_{max}"/>?</Item>
+                    <Item><strong>Pre-load force <InlineEquation equation="\ F_i"/>: </strong> The force applied when tightening a bolt.</Item>
+                    <Item><strong>External force <InlineEquation equation="\ F_e"/>:  </strong> The extra force trying to separate the joint.</Item>
+                </Itemize>
+            </p>
+
+            <p>
+                This gives us two equations for the force on the bolt <InlineEquation equation="\ F_b"/> and the clamping force <InlineEquation equation="\ F_c"/>
+            </p>
+
+            <DisplayEquation title="Bolt Force" id="FB" background="True" equation="\ F_b = F_i + \\frac{k_b}{k_b + k_c} F_e"/>
+
+            <DisplayEquation title="Clamping Force" id="FC" background="True" equation="\  F_c = F_i - \\frac{k_c}{k_b + k_c} F_e"/>
+            <p>
+                Where
+                <Itemize>
+                    <Item><strong> <InlineEquation equation="\ k_b"/>: </strong> stiffness of bolt</Item>
+                    <Item><strong><InlineEquation equation="\ k_c"/>:  </strong>  stiffness of clamped material</Item>
+                </Itemize>
+            </p>
+
+
+        </SubSection>
+
+        <SubSubSection id="thread_stripping" title="Thread Stripping">
+            <p>
+                One of the most common methods for threaded components to fail is due the the threads shearing off. In order to strip a thread, the applied force must cause the stress to exceed the Von Mises yield strength of the material, <InlineEquation equation="\ S_{sy}=0.58 S_y"/> . For a component with standard threads of width <InlineEquation equation="\ .75 p"/> the area that must be sheared, <InlineEquation equation="\ A_s"/> is:
+
+                <DisplayEquation title="Nut Shear Area" id="SA" background="True" equation="\ A_s = 0.75 \\pi d t"/>
+
+                Where
+                <Itemize>
+                    <Item><strong> <InlineEquation equation="\ d"/>: </strong> outer diameter of the bolt</Item>
+                    <Item><strong><InlineEquation equation="\ t"/>:  </strong>  height of the nut </Item>
                 </Itemize>
 
-            </p>
-                <Image src="/mf/Stress Concentrations/Stress Concentrations Diagram Problem 1.png" width="7"> Figure 1: Sample stress concentration problem </Image>
-            <p>
-                Step 1: Compute the Nominal Stress
-            </p>
-            <p>
-                <InlineEquation equation="\A= (W-d) \\times t= (100 - 20) \\times 10 = 800 \\text{ mm}^2"/>
-            </p>
-            <p>
-                Thus, the nominal stress is:
-            </p>
-            <p>
-                <InlineEquation equation="\\sigma_{\\text{nom}} = \\frac{20,000 \\text{ N}}{800 \\text{ mm}^2} = 25 \\text{ MPa}"/>
+                This means that the force required to shear the threads is:
+
+                <DisplayEquation title="Nut Shear Force" id="SF" background="True" equation="\  F = A_s S_{sy}"/>
             </p>
 
-            <Warning title="Computing Cross Sectional Area" id="stress_concentration_warning">
-                The diameter of the hole must be subtracted from the height of the plate to calculate the correct cross sectional area.
-            </Warning>
-            <p>
-                Step 2: Compute the Maximum Stress
-            </p>
-            <p>
-                The maximum stress <InlineEquation equation="\\sigma_{\\text{max}}"/> at the edge of the hole is given by:
-            </p>
-            <p>
-                <InlineEquation equation="\\sigma_{\\text{max}} = K_t \\times \\sigma_{\\text{nom}}"/>
-            </p>
-            <p>
-                <InlineEquation equation="\\sigma_{\\text{max}} = 3  \\times 25 \\text{ MPa} = 75 \\text{ MPa}"/>
-            </p>
         </SubSubSection>
-    <SubSection id="Applications" title="Application of Stress Concentrations">
-        <p>
-        <strong>What happens if the stress exceeds the yield strength of the material? Plastic Deformation</strong>
-        </p>
-        <p>
-            As we increase the stress on an object, we know that the the stress can’t keep increasing past a certain limit,
-            called the yield strength <InlineEquation equation="\S_y"/> of the material.
-        </p>
-        <p>
-            If stress exceeds the yield strength of the material, plastic deformation will occur.
-            If the stress is evenly distributed across the entire object,
-            this plastic deformation will often cause the object to fail.
-        </p>
-        <p>
-            However, if a stress concentration is present, it is possible for the <strong>maximum</strong> stress to exceed the
-            yield strength of the material, while the nominal stress remains below the material's yield strength.
-        </p>
-        <p>
-            Once yeilding occurs:
-            <Itemize>
-                <Item>Some areas reach their maximum stress limit and start deforming permanently.
-                    This means that these areas cannot bear any additional stress. </Item>
-                <Item>As a result, the stress that was supposed to be born by these area is instead redistributed to
-                    other areas in a process called load redistribution.</Item>
-                <Item>This makes the stress spread out.</Item>
-            </Itemize>
-            <Image src="/mf/Stress Concentrations/Stress Concentrations Diagram Stress Redistribution.png" width="7">
-                Figure 2: Diagram of Stress Redistribution </Image>
-            In figure 2 we can see this process in a little more detail:
-            <Itemize>
-                <Item>The orange curve shows the stress that is applied to the object assuming the material stays elastic (no permanent deformation). </Item>
-                <Item>The vertical dashed lines, <InlineEquation equation="\\sigma_{nom}"/>,<InlineEquation equation="\S_y"/>,and <InlineEquation equation="\\sigma_{max}"/> represent the nominal stress,
-                    the yield strength and the maximum stress respectively</Item>
-                <Item>he blue curve shows the redistributed stress that the material experiences after plastically
-                    deforming and redistributing the stress. Note that the nominal stress is the same, as the decrease
-                    in stress near the stress concentration is offset by an increase in the stress further away from
-                    the stress concentration. </Item>
-            </Itemize>
-        </p>
-        
-    </SubSection>
-        <SubSubSubSection id="Residual_Stress" title="Residual Stresses After Unloading">
-            <p>
-                After the external force is removed, the object will try to return to its original shape.
-                Elastic deformation will be recovered but the plastically deformed regions cannot return to their original form.
-                Due to this, some stresses remain inside the material. These are called residual stresses, and it can be
-                calculated by subtracting the elastic stress (shown in orange) from the actual stress (shown in blue).
-            </p>
-        </SubSubSubSection>
 
-
-    
-
-        <SubSection id="Design_Considerations" title="Design Considerations">
+        <SubSubSection id="Extra" title="Additional Considerations">
             <p>
-                As an engineer, it is important to know when we should consider the effects of stress concentrations,
-                as well as times that the effects of stress concentrations can be safely ignored.
-            </p>
-            <p>
-                In general, stress concentrations can be safely ignored when the material in question is ductile.
-                This is because the material can yield locally, and redistribute stresses. Even if local plastic
-                deformation does occur, it is unlikely to cause the object as a whole to fail.
-            </p>
-            <p>
-                However, there are several situations were it is imperative to consider the impact of stress concentrations.
                 <Itemize>
-                    <Item>Brittle materials may fracture rather than yield locally, so a stress concentration can cause catastrophic failure. </Item>
-                    <Item>Impact or dynamic loading may cause stresses to be applied so quickly that they cannot be adequately redistributed, causing failure.</Item>
-                    <Item>Repeated loading can cause fatigue failure due to cyclic loading. In these scenarios the
-                        presence of stress concentrations can accelerate the process of fatigue failure and should be considered.  </Item>
+                    <Item>Bolt sizes and grades are highly standardized, meaning that it is often far cheaper to use an existing threaded component rather than creating a customized one </Item>
+                    <Item>It is often advantageous for a nut to fail in a bolted connection before the bolt, as the bolt can still restrict some directions of motion, even if the nut has failed</Item>
+
+                    <Item> Screws convert <strong>rotation into straight-line motion</strong>.</Item>
+                    <Item> Power screws provide mechanical advantage to <strong>lift heavy loads</strong>.</Item>
+                    <Item>Bolted connections use <strong>pre-load force</strong> to hold parts together.</Item>
+                    <Item> Threads can <strong>fail by shearing</strong> if overloaded.</Item>
                 </Itemize>
             </p>
 
-    </SubSection>
-
-
-
+        </SubSubSection>
 
 
 
