--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -15,7 +15,7 @@
 
     footer .campus-footer {
         padding-top: 35px;
-        padding-bottom: 35px;
+        padding-bottom: 0px;
         background-color: var(--illini-blue);
         color: #fff;
         border-top: 8px solid var(--illini-orange);
@@ -136,6 +136,12 @@
         font-weight: 600;
     }
 
+    footer .campus-footer h2 {
+        font-size: 1.5rem;
+        font-weight: 600;
+        margin: 0;
+    }
+
     footer .campus-footer .links li {
         padding: 0.5rem 0;
     }
@@ -219,22 +225,15 @@
                 </div>
 
                 <div class="col-12 col-md">
-                    <div class="text-md-right mb-5">
-                        <a href="https://mechse.illinois.edu/people/offices" class="button orange  hide-empty" data-value="10" aria-label="Contact us">Contact us</a>
-                        <a href="" class="button orange  hide-empty" data-value="" aria-label=""></a>
-                    </div>
+                    
 
                     <div class="site-footer-content">
                         <div class="row">
                             <div class="il-footer-column col-12 col-md mb-5 mb-md-0 hide-empty" data-value="480">
                                 <h2 class="text-black">Learn More</h2>
                             <ul>
-                            <li><a href="https://mechse.illinois.edu/about" aria-label="About Us">About Us</a></li>
-                            <li><a href="https://mechse.illinois.edu/people/offices" aria-label="Directory of Offices">Directory of Offices</a></li>
-                            <li><a href="https://mechse.illinois.edu/people" aria-label="Directory of People">Directory of People</a></li>
-                            <li><a href="https://mechse.illinois.edu/about/mechse-careers" aria-label="Careers">Careers</a></li>
-                            <li><a href="https://forms.illinois.edu/sec/1361730861" target="_blank" aria-label="Sign up for MechSE alumni communications; Link opens in new tab">Sign up for MechSE alumni communications</a></li>
-                            <li><a href="https://grainger.illinois.edu/admissions/undergraduate/plan-a-visit" target="_blank" aria-label="Visit The Grainger College of Engineering; Link opens in new tab">Visit The Grainger College of Engineering</a></li>
+                            <li><a href="/about" aria-label="About Us">About Us</a></li>
+                            <li><a href="https://ae3.grainger.illinois.edu/">Academy for Excellence in Engineering Education (AE3)</a></li>
                             </ul>
                             </div>
 
@@ -290,10 +289,6 @@
                     </a>
                     </h2>
                 </div>
-
-                <div id="campus-footer-links" class="row links">
-						<div class="col-md"><h3>Around Campus</h3><ul><li><a href="https://map.illinois.edu/view" target="_blank" aria-label="Campus Map; Link opens in new tab">Campus Map</a></li><li><a href="https://illinois.edu/admissions/index.html" target="_blank" aria-label="University Admissions; Link opens in new tab">University Admissions</a></li><li><a href="https://jobs.illinois.edu/" target="_blank" aria-label="Careers at Illinois; Link opens in new tab">Careers at Illinois</a></li><li><a href="https://news.illinois.edu/" target="_blank" aria-label="University News; Link opens in new tab">University News</a></li><li><a href="https://giving.illinois.edu/" target="_blank" aria-label="Giving at Illinois; Link opens in new tab">Giving at Illinois</a></li><li><a href="https://illinois.edu/alumni/index.html" target="_blank" aria-label="University Alumni; Link opens in new tab">University Alumni</a></li><li><a href="https://illinois.edu/athletics/index.html" target="_blank" aria-label="Athletics; Link opens in new tab">Athletics</a></li><li><a href="https://www.library.illinois.edu/" target="_blank" aria-label="University Library; Link opens in new tab">University Library</a></li></ul></div><div class="col-md"><h3>Universitywide Resources</h3><ul><li><a href="https://illinois.edu/resources/emergency.html" target="_blank" aria-label="Emergency Services; Link opens in new tab">Emergency Services</a></li><li><a href="https://illinois.edu/resources/calendars.html" target="_blank" aria-label="University Calendars; Link opens in new tab">University Calendars</a></li><li><a href="https://directory.illinois.edu/search" target="_blank" aria-label="University Directory; Link opens in new tab">University Directory</a></li><li><a href="https://odos.illinois.edu/community-of-care/student-assistance-
-center/" target="_blank" aria-label="Student Assistance Center; Link opens in new tab">Student Assistance Center</a></li><li><a href="https://wellness.illinois.edu/" target="_blank" aria-label="Health and Wellness; Link opens in new tab">Health and Wellness</a></li><li><a href="https://newstudent.illinois.edu/parents/" target="_blank" aria-label="Parents and Families; Link opens in new tab">Parents and Families</a></li><li><a href="https://covid19.illinois.edu/" target="_blank" aria-label="University COVID-19 Information; Link opens in new tab">University COVID-19 Information</a></li></ul></div><div class="col-md"><h3>About Illinois</h3><ul><li><a href="https://diversity.illinois.edu/" target="_blank" aria-label="VC of Diversity, Equity and Inclusion; Link opens in new tab">VC of Diversity, Equity and Inclusion</a></li><li><a href="https://chancellor.illinois.edu/land_acknowledgement.html" target="_blank" aria-label="Land Acknowledgement; Link opens in new tab">Land Acknowledgement</a></li><li><a href="https://research.illinois.edu/" target="_blank" aria-label="University Research and Innovation; Link opens in new tab">University Research and Innovation</a></li><li><a href="https://techservices.illinois.edu/" target="_blank" aria-label="Technology Services; Link opens in new tab">Technology Services</a></li><li><a href="https://illinois.edu/international/" target="_blank" aria-label="Illinois International; Link opens in new tab">Illinois International</a></li><li><a href="https://strategicplan.illinois.edu/" target="_blank" aria-label="University Strategic Plan; Link opens in new tab">University Strategic Plan</a></li><li><a href="https://www.uillinois.edu/" target="_blank" aria-label="University of Illinois System; Link opens in new tab">University of Illinois System</a></li></ul></div></div>
         </div><!-- end .campus-footer -->
     </div>
 </div>
@@ -304,10 +299,9 @@ center/" target="_blank" aria-label="Student Assistance Center; Link opens in ne
                 <ul>
                     <li><button id="ot-sdk-btn" class="ot-sdk-show-settings text-decoration-none white-text">About Cookies</button></li>
                     <li><a href="https://www.vpaa.uillinois.edu/resources/web_privacy" target="_blank" aria-label="Privacy Policy; Link opens in new tab">Privacy Policy</a></li>
-                    <li><a href="https://illinois.edu/resources/website/copyright.html" target="_blank" aria-label="Copyright © 2024; Link opens in new tab">Copyright © 2024</a></li>
+                    <li><a href="https://illinois.edu/resources/website/copyright.html" target="_blank" aria-label="Copyright © 2025; Link opens in new tab">Copyright © 2025</a></li>
                     <li><a href="https://illinois.edu/resources/website/accessibility.html" target="_blank" aria-label="Accessibility; Link opens in new tab">Accessibility</a></li>
                     <li><a href="mailto:jcr7@illinois.edu" aria-label="Webmaster">Webmaster</a></li>
-                    <li><a href="https://my.mechse.illinois.edu" target="_blank" aria-label="Login; Link opens in new tab">Login</a></li>
                 </ul>
             </div>
         </div>
